syntax = "proto3";

package test;

service Test {
  rpc TestUnary(TestRequest) returns (TestResponse);
  rpc TestStream(TestRequest) returns (stream TestResponse);
}

message TestRequest { uint64 question = 1; }

message TestResponse { uint64 answer = 1; }
